<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Rubber tester</string>

    <string name="dashboard_view">Dashboard View</string>
    <string name="bluetooth_station_connect_view">Bluetooth Stations</string>
    <string name="settings_view">Settings</string>
    <string name="quit_view">Quit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_quit">Quit</string>

    <string name="pref_reconnect">Reconnect</string>
    <string name="pref_reconnect_summ">Automatically reconnect on bluetooth connection interrupt</string>
    <string name="pref_interval">Interval</string>
    <string name="pref_interval_summ">The time interval to show on the graphs</string>
    <string name="pref_connection_type">Connection type</string>
    <string name="pref_connection_type_summ">Choose the connetion type (Wi-Fi or Bluetooth)</string>
    <string name="pref_wifi_station_title">WI-FI Station</string>
    <string name="pref_logging_title">Application logging enabled (restart needed)</string>
    <string name="pref_logging_sum">Write application logs to storage, find logs in Downloads folder</string>
    <string name="pref_logging_days_to_keep_title">Days to keep logs</string>
    <string name="pref_logging_days_to_keep_sum">Maximum days to keep logs, older logs will be deleted</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="load">Load</string>
    <string name="save">Save</string>
    <string name="reconnect_message">Would you like to reconnect to your rubber tester?</string>

    <string name="PREFERENCE_FILE_KEY">com.kresshy.rubbertester.PREFERENCE_FILE_KEY</string>
    <string name="PREFERENCE_CONNECTED">CONNECTED</string>
    <string name="PREFERENCE_DEVICE_ADDRESS">CONNECTED_DEVICE_ADDRESS</string>
    <string name="PREFERENCE_CONNECTION_TYPE">CONNECTION_TYPE</string>

    <string name="calibration_skip">Skipping calibration, only one station</string>

    <string name="default_loc">/sdcard/Android/data/...</string>
    <string name="save_loc">Save location:</string>
    <string name="epl_savename">example:nowind_morning</string>
    <string name="type_filename">Please type in the filename!</string>
    <string name="choose_program">Please choose a program!</string>
    <string name="store_loc">Store location:</string>

    <string name="title_activity_save_dialog">Save Dialog</string>
    <string name="title_activity_load_dialog">Open Dialog</string>
</resources>
