<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@string/type_filename" />

    <EditText
        android:id="@+id/saveValue"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/epl_savename" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:paddingTop="2dp"
        android:text="@string/save_loc" />

    <TextView
        android:id="@+id/saveLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:text="@string/default_loc"
        android:textColor="#AA0000"
        android:textSize="20dp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/btnsavecancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btnsaveok"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/btnsavecancel"
            android:text="@string/save" />

    </RelativeLayout>

</LinearLayout>